<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="54.49dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/textfield">

            <EditText
                android:id="@+id/regis_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8.52dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/textfield">

            <EditText
                android:id="@+id/regis_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/Username"
                android:inputType="text"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8.52dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/textfield">

            <EditText
                android:id="@+id/regis_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8.52dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/textfield">

            <EditText
                android:id="@+id/regis_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint= "@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="133dp"
            android:layout_gravity="center"
            android:layout_marginTop="27.02dp"
            android:layout_marginRight="133dp"
            android:background="@drawable/button"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/button1"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

    </LinearLayout>




</FrameLayout>