<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="170dp"
            android:src="@drawable/logo"
            android:alpha="0.9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="86dp"
            android:layout_marginTop="61.45dp"
            android:layout_marginRight="86dp"
            android:background="@drawable/textfield">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/Username"
                android:inputType="text"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="86dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="86dp"
            android:background="@drawable/textfield">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/myBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="86dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="86dp">

            <TextView
                android:id="@+id/login_forgetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10.37dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:text="Forgotten Password ?"
                android:textColor="#80474443"
                android:textSize="12dp" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="24.77dp"
            android:layout_marginRight="130dp"
            android:background="@drawable/button"
            android:text="Sign In"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14dp" />




    </LinearLayout>
    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/button1"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

    </LinearLayout>

</FrameLayout>